:globe_with_meridians: adds translation

--- a/assets/i18n/ar.json
+++ b/assets/i18n/ar.json
@@ -1,9 +1,7 @@
 {
   "Please select a language from the dropdown.": "الرجاء اختيار لغة من القائمة المنسدلة.",
-  "Please select a language:": "الرجاء اختيار لغة:",
   "Select Language": "اختر اللغة",
   "Select language domain": "اختر دامنه لغة",
-  "Learn German": "تعلم اللغة الألمانية",
   "Tasks": "المهام",
   "Unlock Points": "فتح النقاط",
   "Rate this Challenge": "قيّم هذا التحدي",
@@ -22,17 +20,12 @@
   "Start": "ابدأ",
   "Player Profile": "ملف اللاعب",
   "Save": "حفظ",
-  "Challenge Result": "نتيجة التحدي",
   "Congratulations! You've completed the challenge successfully.": "تهانينا! لقد أكملت التحدي بنجاح.",
   "Excellent!": "ممتاز!",
   "Good job!": "عمل جيد!",
   "Fair attempt.": "محاولة جيدة.",
   "Keep practicing!": "استمر في التدريب!",
   "Your performance shows your current understanding. Keep practicing to improve!": "أداؤك يظهر مدى فهمك الحالي. استمر في التدريب لتحسين مستواك!",
-  "Question": "سؤال",
-  "Correct": "صحيح",
-  "Incorrect": "خطأ",
-  "Continue": "متابعة",
   "Settings": "إعدادات",
   "Light Theme": "سمة فاتحة",
   "Dark Theme": "سمة داكنة",
@@ -66,13 +59,7 @@
   "High Performance": "أداء عالي",
   "Medium Performance": "أداء متوسط",
   "Needs Improvement": "يحتاج إلى تحسين",
-  "Average Time Taken (Seconds)": "متوسط الوقت المستغرق (بالثواني)",
-  "The average time (in seconds) taken to complete a challenge, across all completed challenges.": "متوسط الوقت (بالثواني) المستغرق لإكمال التحدي عبر جميع التحديات المكتملة.",
   "seconds": "ثواني",
-  "Improving": "يتحسن",
-  "Stable": "مستقر",
-  "Declining": "يتراجع",
-  "The percentage of successful challenges out of all completed challenges.": "نسبة التحديات الناجحة من جميع التحديات المكتملة.",
   "Share": "مشاركة",
   "Link copied to clipboard!": "تم نسخ الرابط إلى الحافظة!",
   "No text found": "لم يتم العثور على نص",
@@ -80,11 +67,23 @@
   "Next": "التالي",
   "Select Level": "اختر المستوى",
   "Read aloud": "قراءة بصوت عال",
-  "Listen": "استمع",
   "No vocabulary items available.": "لا توجد عناصر مفردات متاحة.",
   "Page": "صفحة",
   "items": "عناصر",
   "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "راجع هذه الكلمات المفردات ومعانيها. انقر على زر الاستماع لسماع النطق.",
   "Use the Previous/Next buttons to navigate between vocabulary pages.": "استخدم أزرار السابق/التالي للتنقل بين صفحات المفردات.",
-  "Previous": "السابق"
+  "Enhance your learning with our premium educational resources.": "عزز تعلمك بمواردنا التعليمية المميزة.",
+  "No spam. Unsubscribe anytime.": "لا رسائل مزعجة. يمكنك إلغاء الاشتراك في أي وقت.",
+  "Secure checkout": "دفع آمن",
+  "Ad blocker detected. Please consider supporting us:": "تم اكتشاف مانع الإعلانات. يرجى دعمنا:",
+  "Powered by Gumroad": "مدعوم من Gumroad",
+  "Free articles & tutorials": "مقالات ودروس مجانية",
+  "Advertisement": "إعلان",
+  "Subscribe now": "اشترك الآن",
+  "Subscribe to stay up to date and unlock exclusive new content!": "اشترك للبقاء على اطلاع والحصول على محتوى حصري جديد!",
+  "Visit our Blog": "زر مدونتنا",
+  "Read our Blog": "اقرأ مدونتنا",
+  "Want more interactive exercises?": "هل تريد المزيد من التمارين التفاعلية؟",
+  "Get it now": "احصل عليه الآن",
+  "Ad blocker detected. Please consider disabling it to support us.": "تم اكتشاف مانع الإعلانات. يرجى تعطيله لدعمنا."
 }
