--- a/assets/i18n/de.json
+++ b/assets/i18n/de.json
@@ -1,9 +1,7 @@
 {
   "Please select a language from the dropdown.": "Bitte wählen Sie eine Sprache aus dem Dropdown-Menü.",
-  "Please select a language:": "Bitte wählen Sie eine Sprache:",
   "Select Language": "Sprache wählen",
   "Select language domain": "Sprachdomain wählen",
-  "Learn German": "Lernen Sie Deutsch",
   "Tasks": "Aufgaben",
   "Unlock Points": "Freizuschaltende Punkte",
   "Rate this Challenge": "Bewerten Sie diese Übung",
@@ -22,17 +20,12 @@
   "Start": "Start",
   "Player Profile": "Spielerprofil",
   "Save": "Speichern",
-  "Challenge Result": "Ergebnis der Herausforderung",
   "Congratulations! You've completed the challenge successfully.": "Herzlichen Glückwunsch! Sie haben die Herausforderung erfolgreich abgeschlossen.",
   "Excellent!": "Ausgezeichnet!",
   "Good job!": "Gute Arbeit!",
   "Fair attempt.": "Guter Versuch.",
   "Keep practicing!": "Weiter üben!",
   "Your performance shows your current understanding. Keep practicing to improve!": "Ihre Leistung zeigt Ihr aktuelles Verständnis. Üben Sie weiter, um sich zu verbessern!",
-  "Question": "Frage",
-  "Correct": "Richtig",
-  "Incorrect": "Falsch",
-  "Continue": "Weiter",
   "Settings": "Einstellungen",
   "Light Theme": "Helles Design",
   "Dark Theme": "Dunkles Design",
@@ -66,13 +59,7 @@
   "High Performance": "Hohe Leistung",
   "Medium Performance": "Mittlere Leistung",
   "Needs Improvement": "Verbesserungsbedarf",
-  "Average Time Taken (Seconds)": "Durchschnittliche benötigte Zeit (Sekunden)",
-  "The average time (in seconds) taken to complete a challenge, across all completed challenges.": "Die durchschnittliche Zeit (in Sekunden), die zum Abschließen einer Übung benötigt wird.",
   "seconds": "Sekunden",
-  "Improving": "Verbessert sich",
-  "Stable": "Stabil",
-  "Declining": "Verschlechtert sich",
-  "The percentage of successful challenges out of all completed challenges.": "Der Prozentsatz erfolgreicher Aufgaben an allen abgeschlossenen Aufgaben.",
   "Share": "Teilen",
   "Link copied to clipboard!": "Link in die Zwischenablage kopiert!",
   "No text found": "Kein Text gefunden",
@@ -80,11 +67,23 @@
   "Next": "Weiter",
   "Select Level": "Level auswählen",
   "Read aloud": "Vorlesen",
-  "Listen": "Anhören",
   "No vocabulary items available.": "Keine Vokabeln verfügbar.",
   "Page": "Seite",
   "items": "Elemente",
   "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "Überprüfen Sie diese Vokabeln und ihre Bedeutungen. Klicken Sie auf die Anhören-Schaltfläche, um die Aussprache zu hören.",
   "Use the Previous/Next buttons to navigate between vocabulary pages.": "Verwenden Sie die Zurück/Weiter-Schaltflächen, um zwischen den Vokabelseiten zu navigieren.",
-  "Previous": "Zurück"
+  "Enhance your learning with our premium educational resources.": "Verbessern Sie Ihr Lernen mit unseren hochwertigen Lernmaterialien.",
+  "No spam. Unsubscribe anytime.": "Kein Spam. Sie können sich jederzeit abmelden.",
+  "Secure checkout": "Sicherer Checkout",
+  "Ad blocker detected. Please consider supporting us:": "Adblocker erkannt. Bitte unterstützen Sie uns:",
+  "Powered by Gumroad": "Bereitgestellt von Gumroad",
+  "Free articles & tutorials": "Kostenlose Artikel & Tutorials",
+  "Advertisement": "Anzeige",
+  "Subscribe now": "Jetzt abonnieren",
+  "Subscribe to stay up to date and unlock exclusive new content!": "Abonnieren Sie, um auf dem Laufenden zu bleiben und exklusive neue Inhalte freizuschalten!",
+  "Visit our Blog": "Besuchen Sie unseren Blog",
+  "Read our Blog": "Lesen Sie unseren Blog",
+  "Want more interactive exercises?": "Möchten Sie mehr interaktive Übungen?",
+  "Get it now": "Jetzt erhalten",
+  "Ad blocker detected. Please consider disabling it to support us.": "Adblocker erkannt. Bitte deaktivieren Sie ihn, um uns zu unterstützen."
 }
