--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -1,9 +1,7 @@
 {
   "Please select a language from the dropdown.": "Please select a language from the dropdown.",
-  "Please select a language:": "Please select a language:",
   "Select Language": "Select Language",
   "Select language domain": "Select language domain",
-  "Learn German": "Learn German",
   "Tasks": "Tasks",
   "Unlock Points": "Unlock Points",
   "Rate this Challenge": "Rate this Challenge",
@@ -22,17 +20,12 @@
   "Start": "Start",
   "Player Profile": "Player Profile",
   "Save": "Save",
-  "Challenge Result": "Challenge Result",
   "Congratulations! You've completed the challenge successfully.": "Congratulations! You've completed the challenge successfully.",
   "Excellent!": "Excellent!",
   "Good job!": "Good job!",
   "Fair attempt.": "Fair attempt.",
   "Keep practicing!": "Keep practicing!",
   "Your performance shows your current understanding. Keep practicing to improve!": "Your performance shows your current understanding. Keep practicing to improve!",
-  "Question": "Question",
-  "Correct": "Correct",
-  "Incorrect": "Incorrect",
-  "Continue": "Continue",
   "Settings": "Settings",
   "Light Theme": "Light Theme",
   "Dark Theme": "Dark Theme",
@@ -66,13 +59,7 @@
   "High Performance": "High Performance",
   "Medium Performance": "Medium Performance",
   "Needs Improvement": "Needs Improvement",
-  "Average Time Taken (Seconds)": "Average Time Taken (Seconds)",
-  "The average time (in seconds) taken to complete a challenge, across all completed challenges.": "The average time (in seconds) taken to complete a challenge, across all completed challenges.",
   "seconds": "seconds",
-  "Improving": "Improving",
-  "Stable": "Stable",
-  "Declining": "Declining",
-  "The percentage of successful challenges out of all completed challenges.": "The percentage of successful challenges out of all completed challenges.",
   "Share": "Share",
   "Link copied to clipboard!": "Link copied to clipboard!",
   "No text found": "No text found",
@@ -80,11 +67,23 @@
   "Next": "Next",
   "Select Level": "Select Level",
   "Read aloud": "Read aloud",
-  "Listen": "Listen",
   "No vocabulary items available.": "No vocabulary items available.",
   "Page": "Page",
   "items": "items",
   "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.",
   "Use the Previous/Next buttons to navigate between vocabulary pages.": "Use the Previous/Next buttons to navigate between vocabulary pages.",
-  "Previous": "Previous"
+  "Enhance your learning with our premium educational resources.": "Enhance your learning with our premium educational resources.",
+  "No spam. Unsubscribe anytime.": "No spam. Unsubscribe anytime.",
+  "Secure checkout": "Secure checkout",
+  "Ad blocker detected. Please consider supporting us:": "Ad blocker detected. Please consider supporting us:",
+  "Powered by Gumroad": "Powered by Gumroad",
+  "Free articles & tutorials": "Free articles & tutorials",
+  "Advertisement": "Advertisement",
+  "Subscribe now": "Subscribe now",
+  "Subscribe to stay up to date and unlock exclusive new content!": "Subscribe to stay up to date and unlock exclusive new content!",
+  "Visit our Blog": "Visit our Blog",
+  "Read our Blog": "Read our Blog",
+  "Want more interactive exercises?": "Want more interactive exercises?",
+  "Get it now": "Get it now",
+  "Ad blocker detected. Please consider disabling it to support us.": "Ad blocker detected. Please consider disabling it to support us."
 }
