--- a/assets/i18n/es.json
+++ b/assets/i18n/es.json
@@ -1,9 +1,7 @@
 {
   "Please select a language from the dropdown.": "Por favor, seleccione un idioma del menú desplegable.",
-  "Please select a language:": "Por favor, seleccione un idioma:",
   "Select Language": "Seleccionar idioma",
   "Select language domain": "Seleccionar dominio de idioma",
-  "Learn German": "Aprender alemán",
   "Tasks": "Tareas",
   "Unlock Points": "Desbloquear puntos",
   "Rate this Challenge": "Calificar este desafío",
@@ -22,17 +20,12 @@
   "Start": "Comenzar",
   "Player Profile": "Perfil del jugador",
   "Save": "Guardar",
-  "Challenge Result": "Resultado del desafío",
   "Congratulations! You've completed the challenge successfully.": "¡Felicidades! Has completado el desafío con éxito.",
   "Excellent!": "¡Excelente!",
   "Good job!": "¡Buen trabajo!",
   "Fair attempt.": "Intento aceptable.",
   "Keep practicing!": "¡Sigue practicando!",
   "Your performance shows your current understanding. Keep practicing to improve!": "Tu rendimiento muestra tu comprensión actual. ¡Sigue practicando para mejorar!",
-  "Question": "Pregunta",
-  "Correct": "Correcto",
-  "Incorrect": "Incorrecto",
-  "Continue": "Continuar",
   "Settings": "Configuración",
   "Light Theme": "Tema claro",
   "Dark Theme": "Tema oscuro",
@@ -66,13 +59,7 @@
   "High Performance": "Alto rendimiento",
   "Medium Performance": "Rendimiento medio",
   "Needs Improvement": "Necesita mejorar",
-  "Average Time Taken (Seconds)": "Tiempo promedio empleado (segundos)",
-  "The average time (in seconds) taken to complete a challenge, across all completed challenges.": "El tiempo promedio (en segundos) para completar un desafío, en todos los desafíos completados.",
   "seconds": "segundos",
-  "Improving": "Mejorando",
-  "Stable": "Estable",
-  "Declining": "Empeorando",
-  "The percentage of successful challenges out of all completed challenges.": "El porcentaje de desafíos exitosos sobre el total de desafíos completados.",
   "Share": "Compartir",
   "Link copied to clipboard!": "¡Enlace copiado al portapapeles!",
   "No text found": "No se encontró texto",
@@ -80,11 +67,23 @@
   "Next": "Siguiente",
   "Select Level": "Seleccionar nivel",
   "Read aloud": "Leer en voz alta",
-  "Listen": "Escuchar",
   "No vocabulary items available.": "No hay elementos de vocabulario disponibles.",
   "Page": "Página",
   "items": "elementos",
   "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "Revisa estas palabras de vocabulario y sus significados. Haz clic en el botón de escuchar para oír la pronunciación.",
   "Use the Previous/Next buttons to navigate between vocabulary pages.": "Usa los botones Anterior/Siguiente para navegar entre las páginas de vocabulario.",
-  "Previous": "Anterior"
+  "Enhance your learning with our premium educational resources.": "Mejora tu aprendizaje con nuestros recursos educativos premium.",
+  "No spam. Unsubscribe anytime.": "Sin spam. Puedes darte de baja en cualquier momento.",
+  "Secure checkout": "Pago seguro",
+  "Ad blocker detected. Please consider supporting us:": "Se ha detectado un bloqueador de anuncios. Por favor, considera apoyarnos:",
+  "Powered by Gumroad": "Desarrollado por Gumroad",
+  "Free articles & tutorials": "Artículos y tutoriales gratuitos",
+  "Advertisement": "Publicidad",
+  "Subscribe now": "Suscríbete ahora",
+  "Subscribe to stay up to date and unlock exclusive new content!": "¡Suscríbete para mantenerte al día y desbloquear contenido exclusivo!",
+  "Visit our Blog": "Visita nuestro blog",
+  "Read our Blog": "Lee nuestro blog",
+  "Want more interactive exercises?": "¿Quieres más ejercicios interactivos?",
+  "Get it now": "Consíguelo ahora",
+  "Ad blocker detected. Please consider disabling it to support us.": "Se ha detectado un bloqueador de anuncios. Por favor, considera desactivarlo para apoyarnos."
 }
