--- a/assets/i18n/pl.json
+++ b/assets/i18n/pl.json
@@ -1,9 +1,7 @@
 {
   "Please select a language from the dropdown.": "Proszę wybrać język z listy rozwijanej.",
-  "Please select a language:": "Proszę wybrać język:",
   "Select Language": "Wybierz język",
   "Select language domain": "Wybierz domenę języka",
-  "Learn German": "Aprender alemán",
   "Tasks": "Zadania",
   "Unlock Points": "Odblokuj punkty",
   "Rate this Challenge": "Oceń to wyzwanie",
@@ -22,17 +20,12 @@
   "Start": "Start",
   "Player Profile": "Profil gracza",
   "Save": "Zapisz",
-  "Challenge Result": "Wynik wyzwania",
   "Congratulations! You've completed the challenge successfully.": "Gratulacje! Ukończyłeś wyzwanie pomyślnie.",
   "Excellent!": "Doskonały!",
   "Good job!": "Dobra robota!",
   "Fair attempt.": "Niezła próba.",
   "Keep practicing!": "Ćwicz dalej!",
   "Your performance shows your current understanding. Keep practicing to improve!": "Twój wynik pokazuje aktualny poziom zrozumienia. Ćwicz dalej, aby się poprawić!",
-  "Question": "Pytanie",
-  "Correct": "Poprawnie",
-  "Incorrect": "Niepoprawnie",
-  "Continue": "Kontynuuj",
   "Settings": "Ustawienia",
   "Light Theme": "Jasny motyw",
   "Dark Theme": "Ciemny motyw",
@@ -66,13 +59,7 @@
   "High Performance": "Wysoka wydajność",
   "Medium Performance": "Średnia wydajność",
   "Needs Improvement": "Wymaga poprawy",
-  "Average Time Taken (Seconds)": "Średni czas (sekundy)",
-  "The average time (in seconds) taken to complete a challenge, across all completed challenges.": "Średni czas (w sekundach) potrzebny na ukończenie zadania, we wszystkich ukończonych zadaniach.",
   "seconds": "sekundy",
-  "Improving": "Poprawa",
-  "Stable": "Stabilny",
-  "Declining": "Pogorszenie",
-  "The percentage of successful challenges out of all completed challenges.": "Procent udanych zadań spośród wszystkich ukończonych zadań.",
   "Share": "Udostępnij",
   "Link copied to clipboard!": "Link skopiowany do schowka!",
   "No text found": "Nie znaleziono tekstu",
@@ -80,11 +67,23 @@
   "Next": "Dalej",
   "Select Level": "Wybierz poziom",
   "Read aloud": "Czytaj na głos",
-  "Listen": "Słuchaj",
   "No vocabulary items available.": "Brak dostępnych elementów słownictwa.",
   "Page": "Strona",
   "items": "elementy",
   "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "Przejrzyj te słowa i ich znaczenia. Kliknij przycisk słuchaj, aby usłyszeć wymowę.",
   "Use the Previous/Next buttons to navigate between vocabulary pages.": "Użyj przycisków Poprzedni/Następny, aby nawigować między stronami słownictwa.",
-  "Previous": "Poprzedni"
+  "Enhance your learning with our premium educational resources.": "Ulepsz swoje nauczanie dzięki naszym materiałom edukacyjnym premium.",
+  "No spam. Unsubscribe anytime.": "Brak spamu. Możesz zrezygnować w każdej chwili.",
+  "Secure checkout": "Bezpieczna płatność",
+  "Ad blocker detected. Please consider supporting us:": "Wykryto blokadę reklam. Prosimy o wsparcie:",
+  "Powered by Gumroad": "Obsługiwane przez Gumroad",
+  "Free articles & tutorials": "Darmowe artykuły i poradniki",
+  "Advertisement": "Reklama",
+  "Subscribe now": "Subskrybuj teraz",
+  "Subscribe to stay up to date and unlock exclusive new content!": "Subskrybuj, aby być na bieżąco i odblokować ekskluzywne nowe treści!",
+  "Visit our Blog": "Odwiedź nasz blog",
+  "Read our Blog": "Przeczytaj nasz blog",
+  "Want more interactive exercises?": "Chcesz więcej interaktywnych ćwiczeń?",
+  "Get it now": "Zdobądź to teraz",
+  "Ad blocker detected. Please consider disabling it to support us.": "Wykryto blokadę reklam. Prosimy o jej wyłączenie, aby nas wesprzeć."
 }
