--- a/assets/i18n/tr.json
+++ b/assets/i18n/tr.json
@@ -1,9 +1,7 @@
 {
   "Please select a language from the dropdown.": "Lütfen açılır menüden bir dil seçin.",
-  "Please select a language:": "Lütfen bir dil seçin:",
   "Select Language": "Dil Seçin",
   "Select language domain": "Dil Domenini Seçin",
-  "Learn German": "Aprender alemán",
   "Tasks": "Görevler",
   "Unlock Points": "Puanları Aç",
   "Rate this Challenge": "Bu Meydan Okumayı Değerlendir",
@@ -22,17 +20,12 @@
   "Start": "Başlat",
   "Player Profile": "Oyuncu Profili",
   "Save": "Kaydet",
-  "Challenge Result": "Meydan Okuma Sonucu",
   "Congratulations! You've completed the challenge successfully.": "Tebrikler! Meydan okumayı başarıyla tamamladınız.",
   "Excellent!": "Mükemmel!",
   "Good job!": "İyi iş!",
   "Fair attempt.": "Fena değil.",
   "Keep practicing!": "Çalışmaya devam et!",
   "Your performance shows your current understanding. Keep practicing to improve!": "Performansınız mevcut anlayışınızı gösteriyor. Gelişmek için çalışmaya devam edin!",
-  "Question": "Soru",
-  "Correct": "Doğru",
-  "Incorrect": "Yanlış",
-  "Continue": "Devam et",
   "Settings": "Ayarlar",
   "Light Theme": "Açık Tema",
   "Dark Theme": "Koyu Tema",
@@ -66,13 +59,7 @@
   "High Performance": "Yüksek Performans",
   "Medium Performance": "Orta Performans",
   "Needs Improvement": "Geliştirilmesi Gerekiyor",
-  "Average Time Taken (Seconds)": "Ortalama Geçen Süre (Saniye)",
-  "The average time (in seconds) taken to complete a challenge, across all completed challenges.": "Tüm tamamlanan görevlerde bir görevi tamamlamak için geçen ortalama süre (saniye cinsinden).",
   "seconds": "saniye",
-  "Improving": "İyileşiyor",
-  "Stable": "Kararlı",
-  "Declining": "Kötüleşiyor",
-  "The percentage of successful challenges out of all completed challenges.": "Tüm tamamlanan görevler arasındaki başarılı görevlerin yüzdesi.",
   "Share": "Paylaş",
   "Link copied to clipboard!": "Bağlantı panoya kopyalandı!",
   "No text found": "Metin bulunamadı",
@@ -80,11 +67,23 @@
   "Next": "İleri",
   "Select Level": "Seviye Seç",
   "Read aloud": "Sesli oku",
-  "Listen": "Dinle",
   "No vocabulary items available.": "Mevcut kelime öğesi yok.",
   "Page": "Sayfa",
   "items": "öğeler",
   "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "Bu kelime öğelerini ve anlamlarını gözden geçirin. Telaffuzu duymak için dinle düğmesine tıklayın.",
   "Use the Previous/Next buttons to navigate between vocabulary pages.": "Kelime sayfaları arasında gezinmek için Önceki/Sonraki düğmelerini kullanın.",
-  "Previous": "Önceki"
+  "Enhance your learning with our premium educational resources.": "Öğreniminizi premium eğitim kaynaklarımızla geliştirin.",
+  "No spam. Unsubscribe anytime.": "Spam yok. İstediğiniz zaman abonelikten çıkabilirsiniz.",
+  "Secure checkout": "Güvenli ödeme",
+  "Ad blocker detected. Please consider supporting us:": "Reklam engelleyici tespit edildi. Lütfen bizi destekleyin:",
+  "Powered by Gumroad": "Gumroad tarafından desteklenmektedir",
+  "Free articles & tutorials": "Ücretsiz makaleler ve eğitimler",
+  "Advertisement": "Reklam",
+  "Subscribe now": "Şimdi abone olun",
+  "Subscribe to stay up to date and unlock exclusive new content!": "Güncel kalmak ve özel yeni içeriklerin kilidini açmak için abone olun!",
+  "Visit our Blog": "Blogumuzu ziyaret edin",
+  "Read our Blog": "Blogumuzu okuyun",
+  "Want more interactive exercises?": "Daha fazla etkileşimli alıştırma ister misiniz?",
+  "Get it now": "Şimdi alın",
+  "Ad blocker detected. Please consider disabling it to support us.": "Reklam engelleyici tespit edildi. Bizi desteklemek için lütfen devre dışı bırakın."
 }
