--- a/assets/i18n/uk.json
+++ b/assets/i18n/uk.json
@@ -1,9 +1,7 @@
 {
   "Please select a language from the dropdown.": "Будь ласка, виберіть мову зі списку.",
-  "Please select a language:": "Будь ласка, виберіть мову:",
   "Select Language": "Вибрати мову",
   "Select language domain": "Вибрати домен мови",
-  "Learn German": "Навчитися німецькій мові",
   "Tasks": "Завдання",
   "Unlock Points": "Розблокувати бали",
   "Rate this Challenge": "Оцініть це завдання",
@@ -22,17 +20,12 @@
   "Start": "Почати",
   "Player Profile": "Профіль гравця",
   "Save": "Зберегти",
-  "Challenge Result": "Результат завдання",
   "Congratulations! You've completed the challenge successfully.": "Вітаємо! Ви успішно виконали завдання.",
   "Excellent!": "Відмінно!",
   "Good job!": "Гарна робота!",
   "Fair attempt.": "Непогана спроба.",
   "Keep practicing!": "Продовжуйте тренуватися!",
   "Your performance shows your current understanding. Keep practicing to improve!": "Ваш результат показує ваш поточний рівень розуміння. Продовжуйте тренуватися, щоб покращити його!",
-  "Question": "Питання",
-  "Correct": "Правильно",
-  "Incorrect": "Неправильно",
-  "Continue": "Продовжити",
   "Settings": "Налаштування",
   "Light Theme": "Світла тема",
   "Dark Theme": "Темна тема",
@@ -66,13 +59,7 @@
   "High Performance": "Висока продуктивність",
   "Medium Performance": "Середня продуктивність",
   "Needs Improvement": "Потрібне покращення",
-  "Average Time Taken (Seconds)": "Середній час виконання (секунди)",
-  "The average time (in seconds) taken to complete a challenge, across all completed challenges.": "Середній час (у секундах), витрачений на виконання завдання серед усіх виконаних завдань.",
   "seconds": "секунд",
-  "Improving": "Покращується",
-  "Stable": "Стабільно",
-  "Declining": "Погіршується",
-  "The percentage of successful challenges out of all completed challenges.": "Відсоток успішних завдань серед усіх виконаних завдань.",
   "Share": "Поділитися",
   "Link copied to clipboard!": "Посилання скопійовано в буфер обміну!",
   "No text found": "Текст не знайдено",
@@ -80,11 +67,23 @@
   "Next": "Далі",
   "Select Level": "Вибрати рівень",
   "Read aloud": "Читати вголос",
-  "Listen": "Слухати",
   "No vocabulary items available.": "Немає доступних елементів словникового запасу.",
   "Page": "Сторінка",
   "items": "елементи",
   "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "Переглянь ці словникові слова та їх значення. Натисни кнопку слухати, щоб почути вимову.",
   "Use the Previous/Next buttons to navigate between vocabulary pages.": "Використовуй кнопки Попередня/Наступна для навігації між сторінками словника.",
-  "Previous": "Попередня"
+  "Enhance your learning with our premium educational resources.": "Покращуйте своє навчання за допомогою наших преміальних освітніх ресурсів.",
+  "No spam. Unsubscribe anytime.": "Без спаму. Ви можете відписатися в будь-який час.",
+  "Secure checkout": "Безпечна оплата",
+  "Ad blocker detected. Please consider supporting us:": "Виявлено блокувальник реклами. Будь ласка, підтримайте нас:",
+  "Powered by Gumroad": "Працює на Gumroad",
+  "Free articles & tutorials": "Безкоштовні статті та уроки",
+  "Advertisement": "Реклама",
+  "Subscribe now": "Підписатися зараз",
+  "Subscribe to stay up to date and unlock exclusive new content!": "Підпишіться, щоб бути в курсі та отримати ексклюзивний новий контент!",
+  "Visit our Blog": "Відвідайте наш блог",
+  "Read our Blog": "Читайте наш блог",
+  "Want more interactive exercises?": "Бажаєте більше інтерактивних вправ?",
+  "Get it now": "Отримати зараз",
+  "Ad blocker detected. Please consider disabling it to support us.": "Виявлено блокувальник реклами. Будь ласка, вимкніть його, щоб підтримати нас."
 }
