--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -1,9 +1,7 @@
 {
   "Please select a language from the dropdown.": "Vui lòng chọn một ngôn ngữ từ danh sách thả xuống.",
-  "Please select a language:": "Vui lòng chọn một ngôn ngữ:",
   "Select Language": "Chọn Ngôn ngữ",
   "Select language domain": "Chọn Domen Ngôn ngữ",
-  "Learn German": "Aprender alemán",
   "Tasks": "Nhiệm vụ",
   "Unlock Points": "Mở khóa Điểm",
   "Rate this Challenge": "Đánh giá Thử thách này",
@@ -22,17 +20,12 @@
   "Start": "Bắt đầu",
   "Player Profile": "Hồ sơ người chơi",
   "Save": "Lưu",
-  "Challenge Result": "Kết quả thử thách",
   "Congratulations! You've completed the challenge successfully.": "Chúc mừng! Bạn đã hoàn thành thử thách thành công.",
   "Excellent!": "Xuất sắc!",
   "Good job!": "Làm tốt lắm!",
   "Fair attempt.": "Cố gắng khá.",
   "Keep practicing!": "Tiếp tục luyện tập!",
   "Your performance shows your current understanding. Keep practicing to improve!": "Thành tích của bạn thể hiện sự hiểu biết hiện tại. Tiếp tục luyện tập để cải thiện!",
-  "Question": "Câu hỏi",
-  "Correct": "Đúng",
-  "Incorrect": "Sai",
-  "Continue": "Tiếp tục",
   "Settings": "Cài đặt",
   "Light Theme": "Giao diện sáng",
   "Dark Theme": "Giao diện tối",
@@ -66,13 +59,7 @@
   "High Performance": "Hiệu suất cao",
   "Medium Performance": "Hiệu suất trung bình",
   "Needs Improvement": "Cần cải thiện",
-  "Average Time Taken (Seconds)": "Thời gian trung bình (giây)",
-  "The average time (in seconds) taken to complete a challenge, across all completed challenges.": "Thời gian trung bình (tính bằng giây) để hoàn thành một thử thách, trên tất cả các thử thách đã hoàn thành.",
   "seconds": "giây",
-  "Improving": "Cải thiện",
-  "Stable": "Ổn định",
-  "Declining": "Giảm sút",
-  "The percentage of successful challenges out of all completed challenges.": "Tỷ lệ phần trăm thử thách thành công trên tổng số thử thách đã hoàn thành.",
   "Share": "Chia sẻ",
   "Link copied to clipboard!": "Liên kết đã được sao chép vào bộ nhớ tạm!",
   "No text found": "Không tìm thấy văn bản",
@@ -80,11 +67,23 @@
   "Next": "Tiếp theo",
   "Select Level": "Chọn Cấp độ",
   "Read aloud": "Đọc to",
-  "Listen": "Nghe",
   "No vocabulary items available.": "Không có mục từ vựng nào khả dụng.",
   "Page": "Trang",
   "items": "mục",
   "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "Xem lại những từ vựng này và ý nghĩa của chúng. Nhấp vào nút nghe để nghe cách phát âm.",
   "Use the Previous/Next buttons to navigate between vocabulary pages.": "Sử dụng các nút Trước/Tiếp theo để điều hướng giữa các trang từ vựng.",
-  "Previous": "Trước"
+  "Enhance your learning with our premium educational resources.": "Nâng cao việc học của bạn với các tài nguyên giáo dục cao cấp của chúng tôi.",
+  "No spam. Unsubscribe anytime.": "Không có thư rác. Bạn có thể hủy đăng ký bất cứ lúc nào.",
+  "Secure checkout": "Thanh toán an toàn",
+  "Ad blocker detected. Please consider supporting us:": "Đã phát hiện trình chặn quảng cáo. Vui lòng hỗ trợ chúng tôi:",
+  "Powered by Gumroad": "Được hỗ trợ bởi Gumroad",
+  "Free articles & tutorials": "Bài viết & hướng dẫn miễn phí",
+  "Advertisement": "Quảng cáo",
+  "Subscribe now": "Đăng ký ngay",
+  "Subscribe to stay up to date and unlock exclusive new content!": "Đăng ký để cập nhật và mở khóa nội dung mới độc quyền!",
+  "Visit our Blog": "Truy cập Blog của chúng tôi",
+  "Read our Blog": "Đọc Blog của chúng tôi",
+  "Want more interactive exercises?": "Bạn muốn có thêm bài tập tương tác?",
+  "Get it now": "Nhận ngay",
+  "Ad blocker detected. Please consider disabling it to support us.": "Đã phát hiện trình chặn quảng cáo. Vui lòng tắt nó để hỗ trợ chúng tôi."
 }
