--- a/assets/i18n/zh.json
+++ b/assets/i18n/zh.json
@@ -1,9 +1,7 @@
 {
   "Please select a language from the dropdown.": "请从下拉菜单中选择一种语言。",
-  "Please select a language:": "请选择一种语言：",
   "Select Language": "选择语言",
   "Select language domain": "选择语言领域",
-  "Learn German": "学习德语",
   "Tasks": "任务",
   "Unlock Points": "解锁积分",
   "Rate this Challenge": "为这个挑战评分",
@@ -22,17 +20,12 @@
   "Start": "开始",
   "Player Profile": "玩家资料",
   "Save": "保存",
-  "Challenge Result": "挑战结果",
   "Congratulations! You've completed the challenge successfully.": "恭喜！你已成功完成挑战。",
   "Excellent!": "优秀！",
   "Good job!": "干得好！",
   "Fair attempt.": "不错的尝试。",
   "Keep practicing!": "继续练习！",
   "Your performance shows your current understanding. Keep practicing to improve!": "你的表现显示了你目前的理解。继续练习以提高！",
-  "Question": "问题",
-  "Correct": "正确",
-  "Incorrect": "错误",
-  "Continue": "继续",
   "Settings": "设置",
   "Light Theme": "浅色主题",
   "Dark Theme": "深色主题",
@@ -66,13 +59,7 @@
   "High Performance": "高表现",
   "Medium Performance": "中等表现",
   "Needs Improvement": "需要改进",
-  "Average Time Taken (Seconds)": "平均用时（秒）",
-  "The average time (in seconds) taken to complete a challenge, across all completed challenges.": "完成所有挑战所需的平均时间（以秒为单位）。",
   "seconds": "秒",
-  "Improving": "改善中",
-  "Stable": "稳定",
-  "Declining": "下降",
-  "The percentage of successful challenges out of all completed challenges.": "所有已完成挑战中成功挑战的百分比。",
   "Share": "分享",
   "Link copied to clipboard!": "链接已复制到剪贴板！",
   "No text found": "未找到文本",
@@ -80,11 +67,23 @@
   "Next": "下一步",
   "Select Level": "选择级别",
   "Read aloud": "朗读",
-  "Listen": "听",
   "No vocabulary items available.": "没有可用的词汇项目。",
   "Page": "页面",
   "items": "项目",
   "Review these vocabulary words and their meanings. Click the listen button to hear the pronunciation.": "复习这些词汇及其含义。点击听取按钮以听取发音。",
   "Use the Previous/Next buttons to navigate between vocabulary pages.": "使用上一页/下一页按钮在词汇页面之间导航。",
-  "Previous": "上一页"
+  "Enhance your learning with our premium educational resources.": "通过我们的优质教育资源提升您的学习。",
+  "No spam. Unsubscribe anytime.": "无垃圾邮件。可随时退订。",
+  "Secure checkout": "安全结账",
+  "Ad blocker detected. Please consider supporting us:": "检测到广告拦截器。请考虑支持我们：",
+  "Powered by Gumroad": "由 Gumroad 提供支持",
+  "Free articles & tutorials": "免费文章和教程",
+  "Advertisement": "广告",
+  "Subscribe now": "立即订阅",
+  "Subscribe to stay up to date and unlock exclusive new content!": "订阅以获取最新信息并解锁独家新内容！",
+  "Visit our Blog": "访问我们的博客",
+  "Read our Blog": "阅读我们的博客",
+  "Want more interactive exercises?": "想要更多互动练习？",
+  "Get it now": "立即获取",
+  "Ad blocker detected. Please consider disabling it to support us.": "检测到广告拦截器。请考虑禁用以支持我们。"
 }
